staging: gdm72xx: Fix bogus test

Test the return as we should

Resolves-bug: https://bugzilla.kernel.org/show_bug.cgi?id=46921
Signed-off-by: Alan Cox <alan@linux.intel.com>
Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>